# plotbot

./: .python-version  README.md  pyproject.toml
.github/workflows/: flake8.yaml
plotbot/: cli.py  maze.py
