[tool.poetry]
name = "plotbot"
version = "0.1.0"
description = "Collection of plotter drawings"
authors = ["Dan McKinley <mcfunley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
